--- a/pom.xml
+++ b/pom.xml
@@ -22,18 +22,13 @@
 	</modules>
 	
 	<properties>
-		<openmrsPlatformVersion>2.0.4</openmrsPlatformVersion>
+		<openmrsPlatformVersion>2.3.0</openmrsPlatformVersion>
 		<openmrsLegacyUiVersion>1.0</openmrsLegacyUiVersion>
-		<webservices.restVersion>2.21.0</webservices.restVersion>
+		<webservices.restVersion>2.26.0</webservices.restVersion>
 		<bedmanagementVersion>5.10.0</bedmanagementVersion>
-		<junitVersion>4.12</junitVersion>
-		<powerMockVersion>1.6.5</powerMockVersion>
-		<hamcrestVersion>1.3</hamcrestVersion>
-		<mockitoVersion>1.10.19</mockitoVersion>
 		<javaxServletVersion>3.0.1</javaxServletVersion>
 		<openmrsAtomfeedVersion>2.6.1</openmrsAtomfeedVersion>
 		<atomfeed.version>1.10.1</atomfeed.version>
-		<webservicesRestModuleVersion>2.16</webservicesRestModuleVersion>
 	</properties>
 	
 	<dependencies>
@@ -57,6 +52,18 @@
 			<version>${openmrsPlatformVersion}</version>
 			<type>test-jar</type>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.ict4h.openmrs</groupId>
+			<artifactId>openmrs-atomfeed-common</artifactId>
+			<version>${openmrsAtomfeedVersion}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.ict4h</groupId>
+			<artifactId>atomfeed-server</artifactId>
+			<version>${atomfeed.version}</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.openmrs.api</groupId>
