BAH-1635 - | Rohit | - Upgrades openmrs version to 2.4.2, legacy ui version to 1.11.0, webservices version 2.29.0, bedmanagement version 5.13.0-SNAPSHOT, javax version to 4.0.1

--- a/pom.xml
+++ b/pom.xml
@@ -22,12 +22,13 @@
 	</modules>
 	
 	<properties>
-		<openmrsPlatformVersion>2.3.0</openmrsPlatformVersion>
-		<openmrsLegacyUiVersion>1.0</openmrsLegacyUiVersion>
-		<webservices.restVersion>2.26.0</webservices.restVersion>
-		<bedmanagementVersion>5.10.0</bedmanagementVersion>
-		<javaxServletVersion>3.0.1</javaxServletVersion>
+		<openmrsPlatformVersion>2.4.2</openmrsPlatformVersion>
+		<openmrsLegacyUiVersion>1.11.0</openmrsLegacyUiVersion>
+		<webservices.restVersion>2.29.0</webservices.restVersion>
+		<bedmanagementVersion>5.13.0-SNAPSHOT</bedmanagementVersion>
+		<javaxServletVersion>4.0.1</javaxServletVersion>
 		<openmrsAtomfeedVersion>2.6.1</openmrsAtomfeedVersion>
+		<servletVersion>3.0-alpha-1</servletVersion>
 		<atomfeed.version>1.10.1</atomfeed.version>
 	</properties>
 	
@@ -97,6 +98,11 @@
 			<artifactId>javax.servlet-api</artifactId>
 			<version>${javaxServletVersion}</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>${servletVersion}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.openmrs.module</groupId>
