--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -28,6 +28,10 @@
                 <type>jar</type>
             </dependency>
             <dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>servlet-api</artifactId>
+            </dependency>
+            <dependency>
                 <groupId>org.openmrs.web</groupId>
                 <artifactId>openmrs-web</artifactId>
                 <scope>test</scope>
